--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						</header>
 						<p>a software engineer who studied Software Engineering at the "Universidad de la Punta" in Argentina. I have seven years of professional experience as a backend developer, during which time I've had the privilege of working in three different countries. This experience has broadened my perspective and enriched my understanding of diverse cultures. I am fluent in Spanish and Portuguese, and proficient in English. In addition to my engineering skills, I hold certifications in data science and two AWS certifications.</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="test.html" class="button">Learn More</a></li>
 						</ul>
 					</section>
 
